--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,10 +17,10 @@
   --background-100: rgb(6, 1, 16);
   --background-200: #0a072c;
   --background-300: #0f0944;
-  --background-400: #625f6a;
-  --background-500: #7b7683;
-  --background-600: #97929b;
-  --background-700: #b3afb4;
+  --background-400: #260974;
+  --background-500: #3c0693;
+  --background-600: #3b00a2;
+  --background-700: #6500c9;
   --background-800: #d0cdd0;
   --background-900: #eceaeb;
   --background-950: #f6f5f7;
