--- a/src/components/common/LinedTitle/style.module.css
+++ b/src/components/common/LinedTitle/style.module.css
@@ -4,10 +4,17 @@
     width: 100%;
     gap: 2rem;
     align-items: center;
+    margin-bottom: 0.5em;
+    font-size: 1.5rem;
+}
+.linedTitle h1 {
+    font-weight: 600;
+    letter-spacing: 2px;
+    font-size: 1em;
 }
 .linedTitle span:first-child, .linedTitle span:last-child {
     height: 0.25rem;
-    border-radius: 0.25rem;
+    opacity: 0;
 }
 .linedTitle span:last-child {
     rotate: 180deg;
