--- a/src/components/layout/Hero/style.module.css
+++ b/src/components/layout/Hero/style.module.css
@@ -1,17 +1,3 @@
-.c {
-    display: flex;
-    flex-direction: column;
-    background-color: black;
-}
-.background {
-    width: 100%;
-    max-height: 700px;
-    height: auto;
-    aspect-ratio: 16/9;
-    object-fit: contain;
-    position: relative;
-    z-index: 1;
-}
 .hero {
     width: 100%;
     height: 38rem;
@@ -19,7 +5,7 @@
     overflow: hidden;
     z-index: 0;
 }
-.backdrop {
+.hero .backdrop {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -27,7 +13,7 @@
     z-index: 1;
     opacity: 1;
 }
-.titleImage {
+.hero .titleImage {
     width: auto;
     max-width: 100%;
     object-fit: contain;
@@ -74,20 +60,14 @@
     line-height: 1.5em;
     margin-bottom: 1em;
 }
-.padding {
-    padding-block: 0.5rem 1.5rem;
-}
 
-.btn {
-    background-color: var(--text-600);
-    color: var(--text-100);
-    font-weight: 600;
-    font-size: 1rem;
-    padding: 0.5rem 2rem;
-    transition: all 200ms var(--curve-snap);
+
+
+/* Alignments */
+
+.center .header .body {
+    align-items: center;
 }
-.btn:hover {
-    background-color: var(--background-900);
-    color: black;
-    padding: 0.5rem 2.5rem;
+.center .header {
+    background: transparent;
 }
