--- a/src/app/(main)/home/style.module.css
+++ b/src/app/(main)/home/style.module.css
@@ -1,7 +1,7 @@
 .c {
     display: flex;
     flex-direction: column;
-    background-color: black;
+    background-color: var(--background-950);
 }
 .background {
     width: 100%;
@@ -75,19 +75,21 @@
     margin-bottom: 1em;
 }
 .padding {
-    padding-block: 0.5rem 1.5rem;
+    padding-block: 1.5rem 1.5rem;
 }
 
 .btn {
-    background-color: var(--text-600);
-    color: var(--text-100);
+    background-color: var(--background-200);
+    color: var(--background-900);
+    border: none;
     font-weight: 600;
     font-size: 1rem;
     padding: 0.5rem 2rem;
     transition: all 200ms var(--curve-snap);
 }
 .btn:hover {
-    background-color: var(--background-900);
+    background-color: var(--background-100);
+    border: none;
     color: black;
     padding: 0.5rem 2.5rem;
 }
