--- a/src/components/layout/PrimaryNavigation/nav.module.css
+++ b/src/components/layout/PrimaryNavigation/nav.module.css
@@ -1,7 +1,7 @@
 .nav {
     display: flex;
     gap: 2rem;
-    background: linear-gradient(-90deg, var(--secondary-25), var(--secondary-100));
+    background: linear-gradient(-90deg, var(--primary-950), var(--primary-900));
     align-items: center;
 }
 .nav > *:last-child {
@@ -15,12 +15,15 @@
     justify-content: center;
     font-size: 2.5rem !important;
     gap: 16px;
-    background-color: var(--secondary-100);
-    padding: .5rem 1rem;
+    background-color: transparent;
+    padding: .25rem 1rem;
+    transition: background-color 250ms var(--curve-snap);
+}
+.nav .logo:hover {
+    background-color: var(--primary-800);
 }
 .nav .logo img {
-    animation: logoRotate 50s linear infinite;
-    height: 2.5rem;
+    height: 3rem;
     width: auto;
 }
 .nav h3 {
