--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,7 @@
   --background-800: #3e1650;
   --background-900: #1f0b28;
   --background-950: #0f0514;
+  --background-925: #08030b;
   
   --primary-50: #f8e5ff;
   --primary-100: #f1ccff;
