--- a/src/components/wrappers/FilmBanner/style.module.css
+++ b/src/components/wrappers/FilmBanner/style.module.css
@@ -1,19 +1,25 @@
 .c {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto;
+    display: flex;
+    max-width: 100%;
     width: 100%;
-    gap: 0.5rem;
+    gap: 1rem;
+    justify-content: center; /* Horizontally centers the grid */
+    align-content: center; /* Vertically centers the grid */
 }
 
-@media screen and (max-width: 700px) {
+@media (max-width: 900px) {
     .c {
-        grid-template-columns: 1fr 1fr;
+        display: grid;
+        width: 100%;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        justify-content: center;
     }
 }
 @media screen and (max-width: 500px) {
     .c {
-        grid-template-columns: 100%;
-        grid-template-rows: repeat(3, 1fr);
+        display: flex;
+        flex-direction: column;
     }
 }
