--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -328,6 +328,7 @@ text-decoration: none;
 @media (prefers-color-scheme: dark) {
 html {
   color-scheme: dark;
+  background-color: var(--background-950);
 }
 }
 
