--- a/src/components/layout/Hero/style.module.css
+++ b/src/components/layout/Hero/style.module.css
@@ -1,9 +1,13 @@
+.heroContainer {
+    padding: 1rem;
+}
 .hero {
     width: 100%;
     height: 40rem;
     position: relative;
     overflow: hidden;
     z-index: 0;
+    border-radius: 1rem;
 }
 .hero .backdrop {
     width: 100%;
@@ -33,7 +37,7 @@
     align-items: center;
     z-index: 2;
     padding-inline: 2rem;
-    background: linear-gradient(90deg, var(--background-950), transparent);
+    background: linear-gradient(90deg, black, transparent);
     /* text-shadow: 4px 8px 20px rgba(0,0,0,0.5); */
 }
 .hero .header .body {
@@ -43,22 +47,6 @@
     justify-content: center;
     height: 100%;
     position: relative;
-}
-.hero .header h1 {
-    text-align: inhreit;
-    font-size: 3.5rem;
-    max-width: 60%;
-    line-height: 1em;
-    margin-bottom: 0.36em;
-}
-.hero .header p {
-    font-size: 1rem;
-    width: 100%;
-    max-width: 32rem;
-    text-align: inherit;
-    color: var(--text-300);
-    line-height: 1.5em;
-    margin-bottom: 1.5em;
 }
 
 
