--- a/src/app/(main)/home/style.module.css
+++ b/src/app/(main)/home/style.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     background: linear-gradient(90deg, var(--background-950), var(--background-925));
+    padding-bottom: 2rem;
 }
 .background {
     width: 100%;
