--- a/src/app/(main)/home/_link_cards/style.module.css
+++ b/src/app/(main)/home/_link_cards/style.module.css
@@ -4,7 +4,7 @@
 
     display: grid;
     grid-template-columns: 5fr 3fr 3fr;
-    grid-template-rows: 24rem;
+    grid-template-rows: auto;
     gap: 1rem;
 }
 .title {
@@ -25,10 +25,13 @@
 .card {
     border-radius: 1rem;
     background-color: var(--primary-900);
-    height: 100%;
     position: relative;
     cursor: pointer;
     overflow: hidden;
+    width: 100%;
+    height: auto;
+    width: 100%;
+    aspect-ratio: 5/7;
     transition: 125ms all var(--curve-snap);
     outline: var(--background-925) 2px solid;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.232);
@@ -51,7 +54,7 @@
     height: 100%;
     scale: 1.01;
     object-fit: cover;
-    object-position: center;
+    object-position: top;
     z-index: 0;
     transition: 125ms all var(--curve-snap);
 }
@@ -83,11 +86,11 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
     justify-content: flex-end;
     font-size: 1.1rem;
     z-index: 10;
-    text-align: left;
+    text-align: center;
     padding: 1rem;
 }
 
