--- a/src/app/(main)/home/_link_cards/style.module.css
+++ b/src/app/(main)/home/_link_cards/style.module.css
@@ -21,7 +21,16 @@
     padding-inline: 1rem;
     line-height: 1.6em;
 }
-
+.nomination:hover {
+    padding: 0.125rem;
+}
+.nomination {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 6/1;
+    padding: 0.25rem;
+    transition: 125ms all var(--curve-snap);
+}
 .card {
     border-radius: 1rem;
     background-color: var(--primary-900);
