--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -274,9 +274,15 @@ font-size: 16px;
 html, body {
 overscroll-behavior-x: none;
 }
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1200px) {
 :root {
   font-size: 16px;
+  --fontSize-xxl: 3rem;
+}
+}
+@media only screen and (max-width: 900px) {
+:root {
+  font-size: 14px;
   --fontSize-xxl: 3rem;
 }
 }
