--- a/src/app/(main)/home/_link_cards/style.module.css
+++ b/src/app/(main)/home/_link_cards/style.module.css
@@ -11,12 +11,13 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    border-radius: 2rem;
 }
 .title h1 {
-    font-size: 2.25rem;
+    font-size: 3rem;
 }
 .title p {
-    font-size: 1.6em;
+    font-size: 2em;
     margin-top: 1.2em;
     padding-inline: 1rem;
     line-height: 1.6em;
@@ -38,9 +39,7 @@
     cursor: pointer;
     overflow: hidden;
     width: 100%;
-    height: auto;
-    width: 100%;
-    aspect-ratio: 5/7;
+    height: 30rem;
     transition: 125ms all var(--curve-snap);
     outline: var(--background-925) 2px solid;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.232);
