--- a/src/components/layout/PrimaryNavigation/nav.module.css
+++ b/src/components/layout/PrimaryNavigation/nav.module.css
@@ -3,6 +3,8 @@
     gap: 2rem;
     background: linear-gradient(90deg, var(--background-950), var(--background-925));
     align-items: center;
+    font-size: 1.25rem;
+    padding: .25em 1em;
 }
 .nav > *:last-child {
     margin-left: auto;
@@ -16,14 +18,13 @@
     font-size: 2.5rem !important;
     gap: 16px;
     background-color: transparent;
-    padding: .25rem 1rem;
-    transition: background-color 250ms var(--curve-snap);
+    transition: scale 250ms var(--curve-snap);
 }
 .nav .logo:hover {
-    background-color: var(--primary-800);
+    scale: 1.0125;
 }
 .nav .logo img {
-    height: 3rem;
+    height: 1.5em;
     width: auto;
 }
 .nav h3 {
