--- a/src/app/(main)/home/_projects_bento/style.module.css
+++ b/src/app/(main)/home/_projects_bento/style.module.css
@@ -28,8 +28,12 @@
     position: relative;
     border-radius: 2rem;
     overflow: hidden;
-    box-shadow: 0rem 1rem 1rem 10px hsl(var(--primary-hue), 50%, 90%);
+    box-shadow: 0rem 1rem 2rem 0rem transparent;
     background: hsl(var(--primary-hue), 100%, 5%);
+    transition: all 250ms var(--curve-snap);
+}
+.card:hover {
+    box-shadow: 0rem 1rem 2rem 0rem hsl(var(--primary-hue), 50%, 7.5%);
 }
 .card img {
     width: 100%;
@@ -46,17 +50,37 @@
     position: absolute;
     left: 0px;
     top: 0px;
+    scale: 1;
+    border-radius: 2rem;
 }
 .info {
-    font-size: 1.25rem;
     color: hsl(var(--secondary-hue), 75%, 90%);
     padding: 1.75rem 2rem;
     position: absolute;
     left: 0px;
     bottom: 0px;
+    z-index: 2;
 }
 .info h4 {
-    font-size: 2rem;
+    font-size: 2.5em;
+}
+.info p {
+    margin-top: 0.5em;
+}
+.one {
+    font-size: 1.5em;
+}
+.three img {
+
+}
+.card::after {
+    content: "";
+    background: linear-gradient(0deg, hsl(var(--primary-hue), 25%, 5%), transparent);
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
 }
 
 .one .info {
@@ -73,11 +97,14 @@
         height: auto;
         max-height: unset;
     }
+    .info h4 {
+        font-size: 2.5rem;
+    }
     .card {
         max-height: 90dvh;
     }
     .one {
-        height: 100dvh;
+        height: 50rem;
         max-height: 90dvh;
     }
 }
