--- a/src/app/(main)/home/_hero/style.module.css
+++ b/src/app/(main)/home/_hero/style.module.css
@@ -2,9 +2,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
 
-    min-height: 90vh;
+    height: 90vh;
     position: relative;
     align-items: center;
     justify-content: center;
@@ -19,6 +18,9 @@
     top: 0px;
     height: 100%;
     width: 100%;
+}
+.video video {
+    object-fit: cover;
 }
 .center {
     display: flex;
@@ -36,15 +38,9 @@
     aspect-ratio: 3/1;
     height: auto;
 }
-.progress {
-    display: flex;
-    position: absolute;
-    bottom: 0rem;
-    left: 0px;
-    right: 0px;
-    width: 0px;
-    height: 0.5rem;
-    background-color: hsl(var(--primary-hue), 50%, 25%);
-    z-index: 2;
-    transition: all 250ms linear;
+
+@media screen and (max-width: 700px) {
+    .c {
+        max-height: 50vh;
+    }
 }
