--- a/src/app/(main)/home/_hero/style.module.css
+++ b/src/app/(main)/home/_hero/style.module.css
@@ -3,11 +3,23 @@
     flex-direction: column;
     width: 100%;
 
-    height: 90vh;
+    height: 100vh;
     position: relative;
     align-items: center;
     justify-content: center;
 
+    overflow: hidden;
+    padding: 1rem;
+}
+.hero {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 2rem;
     overflow: hidden;
 }
 
@@ -41,6 +53,6 @@
 
 @media screen and (max-width: 700px) {
     .c {
-        max-height: 50vh;
+        max-height: 100vh;
     }
 }
