--- a/src/app/(main)/home/_split/style.module.css
+++ b/src/app/(main)/home/_split/style.module.css
@@ -3,15 +3,17 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     height: 100%;
+    max-height: 50rem;
     width: 100%;
     gap: 1rem;
     margin-top: 1rem;
     padding-bottom: 1rem;
     padding-inline: 1rem;
+    align-items: center;
 }
 
 .c {
-    height: 60rem;
+    height: 40rem;
     max-height: 90dvh;
 }
 
@@ -31,6 +33,7 @@
 .media {
     width: 100%;
     height: 100%;
+    max-height: 40rem;
 }
 .body {
     width: 100%;
@@ -109,16 +112,17 @@
     .g {
         display: flex;
         flex-direction: column;
+        height: fit-content;
     }
     .c {
-        height: auto;
+        height: fit-content;
         max-height: unset;
     }
     .info h4 {
         font-size: 2.5rem;
     }
     .card {
-        max-height: 30dvh;
+        max-height: 50dvh;
     }
     .media {
         height: 50rem;
