--- a/src/components/common/VideoPlayer/style.module.css
+++ b/src/components/common/VideoPlayer/style.module.css
@@ -20,3 +20,9 @@
     z-index: 2;
     transition: all 250ms linear;
 }
+
+.fullscreen {
+    width: 100vw !important;
+    height: 100vh !important;
+    object-fit: contain !important;
+}
