--- a/src/components/common/VideoPlayer/style.module.css
+++ b/src/components/common/VideoPlayer/style.module.css
@@ -10,13 +10,13 @@
 }
 .progress {
     display: flex;
-    position: absolute;
-    bottom: 0rem;
-    left: 0px;
-    right: 0px;
-    width: 0px;
+    position: absolute !important;
+    bottom: 1.5rem;
+    left: 2rem;
+    right: 2rem;
+    border-radius: 0.25rem;
     height: 0.5rem;
-    background-color: hsl(var(--primary-hue), 100%,75%);
+    background-color: hsl(var(--primary-hue), 100%,90%);
     z-index: 2;
     transition: all 250ms linear;
 }
