--- a/src/app/(main)/home/_banner_/style.module.css
+++ b/src/app/(main)/home/_banner_/style.module.css
@@ -1,31 +1,56 @@
+.c {
+    padding-inline: 1rem;
+}
 .grid {
     width: 100%;
-    padding: 1rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    /* padding: 1rem; */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     justify-content: center;
     align-items: center;
     gap: 1rem;
 
-    background-color: hsl(var(--primary-hue), 100%, 70%);
+    background-color: hsl(var(--hue), 100%, 85%);
     border-radius: 1rem;
-    color: hsl(var(--primary-hue), 100%, 25%);;
+    color: hsl(var(--hue), 100%, 25%);;
+
+    overflow: hidden;
+    position: relative;
 }
-.title {
+.image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0rem;
+    right: 0px;
+    bottom: 0px;
+    object-fit: contain;
+    object-position: right;
+    z-index: 1;
+}
+.body {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: flex-cemn;
-    align-items: center;
-    margin-top: 1.2em;
+    align-items: flex-start;
     padding-inline: 1rem;
-    text-align: center;
+    text-align: start;
+    padding: 1.75em 2em;
+    z-index: 2;
+    background: linear-gradient(90deg, hsl(var(--hue), 100%, 85%) 36%, transparent 100%);
 }
-.title h1 {
-    font-size: 3rem;
-    margin-bottom: 0.1em;
+.body h1 {
+    font-size: 2.5rem;
+    margin-bottom: 0.25em;
 }
-.title p {
-    font-size: 1.6em;
-    line-height: 1.6em;
+.body p {
+    font-size: 1.25em;
+    line-height: 1.5em;
+}
+
+@media screen and (max-width: 700px) {
+    .grid {
+        grid-template-columns: 5fr 2fr;
+    }
 }
