--- a/src/app/(main)/prosjekt/dbl/style.module.css
+++ b/src/app/(main)/prosjekt/dbl/style.module.css
@@ -1,30 +1,24 @@
 .c {
     position: relative;
-    height: 100%;
     width: 100%;
-    height: 100dvh;
-    overflow: hidden;
+    min-height: 100dvh;
+    background-color: hsl(var(--primary-hue), 75%, 2.5%);
+    overflow: auto;
 }
-
-.c::after {
-    content: "";
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    height: 100%;
-    width: 100%;
-    background: linear-gradient(-90deg, transparent, rgba(0,0,0,0.5), black);
-    z-index: 2;
+.g {
+    position: relative;
 }
-
 .background {
-    position:   absolute;
+    position:   fixed;
     top:        0px;
     left:       0px;
     width:      100%;
     height:     100%;
     object-fit: cover;
-    animation: 2s cubic-bezier(0.075, 0.82, 0.165, 1) img-show;
+    overflow: hidden;
+    opacity: 0.25;
+    filter: blur(16px);
+    /* animation: 2s cubic-bezier(0.075, 0.82, 0.165, 1) img-show; */
 }
 @keyframes img-show {
     0% {
