--- a/src/components/common/VideoPlayer/style.module.css
+++ b/src/components/common/VideoPlayer/style.module.css
@@ -14,3 +14,14 @@
     height: 100vh !important;
     object-fit: contain !important;
 }
+.progressBar {
+    width: 100%;
+    position: absolute !important;
+    bottom: 0px;
+    height: 0.25rem !important;
+}
+.progress {
+    background-color: hsl(var(--primary-hue), 1%, 90%) !important;
+    z-index: 10;
+    border-radius: 0px !important;
+}
