--- a/src/app/(main)/home/_split/style.module.css
+++ b/src/app/(main)/home/_split/style.module.css
@@ -22,12 +22,14 @@
     grid-row-end: 5;
     grid-column-start: 2;
     grid-column-end: 3;
+    text-align: left;
 }
 .rtl .body, .ltr .media {
     grid-row-start: 1;
     grid-row-end: 5;
     grid-column-start: 1;
     grid-column-end: 2;
+    text-align: right;
 }
 
 .media {
@@ -93,11 +95,13 @@
 .info h4 {
     font-size: 2.5em;
     color: hsl(var(--primary-hue), 50%, 90%);
+    width: 100%;
 }
 .info p {
     margin-top: 0.5em;
     line-height: 1.25em;
     color: hsl(var(--primary-hue), 25%, 80%);
+    width: 100%;
 }
 .media {
     font-size: 1.5em;
@@ -123,6 +127,10 @@
     }
     .info h4 {
         font-size: 2.5rem;
+        text-align: center;
+    }
+    .info p {
+        text-align: center;
     }
     .card {
         max-height: 50vh;
