--- a/src/app/(main)/prosjekt/dbl/style.module.css
+++ b/src/app/(main)/prosjekt/dbl/style.module.css
@@ -18,7 +18,7 @@
     object-fit: cover;
 }
 .title {
-    color: hsl(var(--primary-hue), 75%, 90%);;
+    color: hsl(355, 100%, 40%);;
     font-size: 8rem;
     margin-top: 25vh;
 }
@@ -36,9 +36,24 @@
     height:     100%;
     object-fit: cover;
     overflow: hidden;
-    opacity: 0.25;
-    /* filter: blur(16px); */
+    opacity: 1;
+    filter: blur(16px);
     /* animation: 2s cubic-bezier(0.075, 0.82, 0.165, 1) img-show; */
+}
+.background img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.background::after {
+    content: "";
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, hsla(var(--primary-hue), 0%, 0%, 75%), hsla(var(--primary-hue), 0%, 0%, 100%), hsla(var(--primary-hue), 0%, 0%, 75%));
+    z-index: 10;
 }
 @keyframes img-show {
     0% {
