--- a/src/components/wrappers/MaxWidthWrapper/style.module.css
+++ b/src/components/wrappers/MaxWidthWrapper/style.module.css
@@ -1,5 +1,6 @@
 .maxWidth {
-    max-width: 1500px;
+    --max-width: 1500px;
+    max-width: var(--max-width);
     width: 100%;
     padding-inline: 1rem;
     margin-inline: auto;
@@ -13,6 +14,6 @@
 }
 @media (min-width: 701px) {
     .maxWidth {
-        max-width: 1200px;
+        --max-width: 1200px;
     }
 }
