--- a/src/components/common/VideoPlayer/style.module.css
+++ b/src/components/common/VideoPlayer/style.module.css
@@ -25,3 +25,34 @@
     z-index: 10;
     border-radius: 0px !important;
 }
+
+.audioToggle {
+    position: absolute;
+    right: 0.5rem;
+    bottom: 0.5rem;
+    height: 3rem;
+    width: 3rem;
+    border-radius: 1.5rem;
+    z-index: 10;
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-drag: none;
+    /* background-color: hsl(var(--primary-hue), 25%, 5%) !important; */
+}
+.audioToggle:hover img {
+    opacity: 0.75;
+    scale: .8;
+}
+.audioToggle img {
+    transition: all 125ms var(--curve-snap);
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    padding: 0.25rem;
+    scale: 0.75;
+    opacity: 0.25;
+    border-radius: 1.5rem;
+    background-color: hsl(var(--primary-hue), 25%, 5%) !important;
+}
