--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -333,7 +333,7 @@ max-width: 100vw;
 overflow-x: hidden;
 overscroll-behavior:none;
 scroll-behavior: smooth;
-background-color: var(--background-50);
+background-color: hsl(var(--primary-hue), 75%, 2.5%);
 font-family: var(--font-inter);
 }
 
