--- a/src/app/(main)/home/_hero/style.module.css
+++ b/src/app/(main)/home/_hero/style.module.css
@@ -38,7 +38,11 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    z-index: 2;
+    z-index: 5;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    translate: -50% -50%;
 }
 .bl {
     display: flex;
