--- a/src/app/(main)/prosjekt/dbl/style.module.css
+++ b/src/app/(main)/prosjekt/dbl/style.module.css
@@ -9,8 +9,10 @@
 
     display: flex;
     flex-direction: column;
+    
 }
 .g {
+    padding-bottom: 16rem;
     display: flex;
     flex-direction: column;
     gap: 2rem;
