--- a/src/app/(main)/home/_split/style.module.css
+++ b/src/app/(main)/home/_split/style.module.css
@@ -78,11 +78,12 @@
     left: 0px;
     top: 0px;
     scale: 1;
-    border-radius: 0rem;
+    border-radius: 0.5rem;
+    overflow: hidden;
 }
 .card .video video {
     object-fit: cover;
-    border-radius: 0rem;
+    border-radius: 0.5rem;
 }
 .info {
     color: hsl(var(--secondary-hue), 75%, 90%);
