--- a/src/app/(main)/home/_dbl/dbl.module.css
+++ b/src/app/(main)/home/_dbl/dbl.module.css
@@ -16,7 +16,7 @@
 }
 .g {
     display: grid;
-    gap: 1rem;
+    gap: 2rem;
     align-items: flex-start;
     position: relative;
     grid-template-columns: 1fr 1fr;
@@ -35,8 +35,9 @@
     min-height: 100%;
     text-align: right;
     padding: 2rem;
+    padding-right: 0px;
     padding-block: 2rem;
-    gap: 1rem;
+    gap: 2rem;
 }
 .body h4 {
     font-size: 2.5em;
@@ -45,7 +46,7 @@
 }
 .body p {
     margin-top: 0.5em;
-    line-height: 1.25em;
+    line-height: 1.5em;
     font-size: 1.25em;
     color: hsl(var(--primary-hue), 25%, 80%);
     width: 100%;
@@ -77,7 +78,7 @@
     border-radius: 0.5rem;
     overflow: hidden;
     border: 2px solid hsl(51, 20%, 20%);
-    animation: nominee 1s ease-in-out infinite;
+    animation: nominee 5s ease-in-out infinite;
 }
 .poster {
     height: 100%;
@@ -102,7 +103,7 @@
 .nomination {
     position: absolute;
     bottom: 1rem;
-    width: 50%;
+    width: 50%; 
     height: auto;
 }
 
