--- a/src/app/(main)/home/_single/style.module.css
+++ b/src/app/(main)/home/_single/style.module.css
@@ -51,7 +51,7 @@
     background: transparent;
     transition: all 250ms var(--curve-snap);
 }
-.card img {
+.card > img {
     width: 100%;
     height: 100%;
     object-fit: cover;
