--- a/src/app/(main)/home/_dbl/dbl.module.css
+++ b/src/app/(main)/home/_dbl/dbl.module.css
@@ -46,7 +46,7 @@
 }
 .body p {
     margin-top: 0.5em;
-    line-height: 1.5em;
+    line-height: 1.25em;
     font-size: 1.25em;
     color: hsl(var(--primary-hue), 25%, 80%);
     width: 100%;
@@ -56,8 +56,8 @@
     padding: 1rem;
     background: hsl(var(--primary-hue), 50% 50%);
     font-size: 1.25em;
-    background-color: hsl(var(--primary-hue), 25%, 5%);
-    border: 2px solid hsl(var(--primary-hue), 25%, 5%);
+    background-color: hsl(var(--primary-hue), 25%, 10%);
+    border: 2px solid hsl(var(--primary-hue), 25%, 15%);
     transition: all 125ms var(--curve-snap);
     border-radius: 0.25rem;
 }
@@ -116,6 +116,7 @@
         padding-bottom: 0rem;
     }
     .body {
+        padding: 2rem;
         padding-top: 1rem;
         align-items: center;
         text-align: center;
