--- a/src/app/(main)/home/_split/style.module.css
+++ b/src/app/(main)/home/_split/style.module.css
@@ -1,7 +1,6 @@
 .g {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    display: flex;
+    flex-direction: row;
     height: 100%;
     max-height: 50rem;
     width: 100%;
@@ -13,7 +12,6 @@
 }
 
 .c {
-    height: 40rem;
     max-height: 90vh;
 }
 
@@ -36,11 +34,13 @@
     width: 100%;
     height: 100%;
     max-height: 30rem;
+    min-height: 20rem;
 }
 .body {
     width: 100%;
-    height: 100%;
+    height: auto;
     background-color: transparent !important;
+    padding-block: 2rem;
 }
 .body .info {
     display: flex;
@@ -48,8 +48,6 @@
     justify-content: center;
     flex-direction: column;
     position: relative;
-    height: 100%;
-
     font-size: 1.25rem;
     color: hsl(var(--primary-hue), 25%, 90%);
 }
